[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
authors = ["Valeria Fadeeva <valeria@fadeeva.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.*"
fltk-theme = "^0.*"
#futures = "0.3"
#tokio = { version = "^1.*", features = ["full"] }
